--- a/DESN440/styles.css
+++ b/DESN440/styles.css
@@ -1,3 +1,15 @@
 .title {
     color: green;
 }
+@font-face {
+    font-family: chromatica;
+    src: url(assets/ChromaticaTrial/ChromaticaTrial-Regular.otf);
+}
+@font-face {
+    font-family: hellenic;
+    src: url(assets/HellenicTypewriterTrial/HellenicTypewriterTrial-Regular.otf);
+}
+
+* {
+    font-family: chromatica;
+}
