--- a/DESN440/styles.css
+++ b/DESN440/styles.css
@@ -1,6 +1,9 @@
+/*
 .title {
     color: green;
 }
+*/
+
 @font-face {
     font-family: chromatica;
     src: url(assets/ChromaticaTrial/ChromaticaTrial-Regular.otf);
