--- a/project1/style.css
+++ b/project1/style.css
@@ -12,6 +12,7 @@
     src: url("../project1/ostrich-sans/ostrichsans-bold-webfont.woff2");
     src: url("../project1/ostrich-sans/ostrichsans-heavy-webfont.woff2");
     src: url("../project1/ostrich-sans/ostrichsans-medium-webfont.woff2");
+    src: url("../project1/ostrich-sans/ostrichsans-black-webfont.woff2");
 }
 @font-face{
   font-family: "amble";
