--- a/project1/style.css
+++ b/project1/style.css
@@ -32,11 +32,11 @@ h3 {font-family: 'ostrichsans-bold';
 font-size:28px;
 color: #C5AF6F;
 }
-h4 {font-family: ostrichsans-medium;
+h4 {font-family: 'ostrichsans-medium';
     font-size: 24px;
     color: #C5AF6F;
 }
-h5 {font-family: ostrichsans-black;
+h5 {font-family: 'ostrichsans-black';
     font-size: 18px;
     color: #C5AF6F;
 }
