--- a/project1/style.css
+++ b/project1/style.css
@@ -32,7 +32,7 @@ h3 {font-family: 'ostrichsans-bold';
 font-size:28px;
 color: #C5AF6F;
 }
-h4 {font-family: 'ostrichsans-medium';
+h4 {font-family: 'ostrichsansrounded-medium';
     font-size: 24px;
     color: #C5AF6F;
 }
