--- a/project1/style.css
+++ b/project1/style.css
@@ -22,7 +22,7 @@ h1 {
   font-family: 'ostrichsans-heavy';
   font-size: 72px;
 }
-h2 {font-family: 'ostrichsansrounded-medium';
+h2 {font-family: 'ostrichsans-medium';
 font-size:42px;
 color: #C5AF6F;
 padding:1rem;
