--- a/project1/style.css
+++ b/project1/style.css
@@ -22,7 +22,7 @@ h1 {
   font-family: 'ostrichsans-heavy';
   font-size: 72px;
 }
-h2 {font-family: 'ostrichsans-medium';
+h2 {font-family: 'ostrichsans-heavy';
 font-size:42px;
 color: #C5AF6F;
 padding:1rem;
@@ -32,7 +32,7 @@ h3 {font-family: 'ostrichsans-bold';
 font-size:28px;
 color: #C5AF6F;
 }
-h4 {font-family: 'ostrichsans-medium';
+h4 {font-family: 'ostrichsans-heavy';
     font-size: 24px;
     color: #C5AF6F;
 }
